--- a/backend/views/projects/detail.ejs
+++ b/backend/views/projects/detail.ejs
@@ -1,4 +1,5 @@
 <% include ./../partials/head %>
 <h1>Detail</h1>
 <h2><%= project.name %></h2>
+<p><a href="/projects">Back to Projects</a></p>
 <% include ./../partials/foot %>
